--- a/StockMarketSimulator.Api/appsettings.Development.json
+++ b/StockMarketSimulator.Api/appsettings.Development.json
@@ -30,5 +30,8 @@
     "Issuer": "stock-market-simulator",
     "Audience": "investors",
     "ExpirationInMinutes": 60
+  },
+  "ConnectionStrings": {
+    "Database": "Host=stockmarketsimulator-postgres;Port=5432;Database=stock-market-simulator;Username=postgres;Password=postgres;Include Error Detail=true"
   }
 }
