--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,6 +7,18 @@ services:
     ports:
      - 5000:8080
      - 5001:8081
+
+  stockmarketsimulator-postgres:
+    image: postgres:latest
+    container_name: postgres
+    environment:
+      - POSTGRES_DB=stock-market-simulator
+      - POSTGRES_USER=postgres
+      - POSTGRES_PASSWORD=postgres
+    volumes:
+      - ./.containers/db:/var/lib/postgresql/data
+    ports:
+      - 5432:5432
   
   stockmarketsimulator-seq:
     image: datalust/seq:latest
