--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -27,3 +27,10 @@ services:
       - ACCEPT_EULA=Y
     ports:
       - 8081:80
+
+  stockmarketsimulator-cache:
+    image: redis:latest
+    container_name: redis
+    restart: always
+    ports:
+     - 6379:6379  
