feat: added ability to register a user

--- a/StockMarketSimulator.Api/appsettings.Development.json
+++ b/StockMarketSimulator.Api/appsettings.Development.json
@@ -34,5 +34,10 @@
   "ConnectionStrings": {
     "Database": "Host=stockmarketsimulator-postgres;Port=5432;Database=stock-market-simulator;Username=postgres;Password=postgres;Include Error Detail=true",
     "Cache": "redis:6379"
+  },
+  "RabbitMq": {
+    "Host": "amqp://stockmarketsimulator-queue:5672",
+    "Username": "guest",
+    "Password": "guest"
   }
 }
