--- a/StockMarketSimulator.Api/StockMarketSimulator.Api.csproj
+++ b/StockMarketSimulator.Api/StockMarketSimulator.Api.csproj
@@ -14,6 +14,7 @@
     <PackageReference Include="AspNetCore.HealthChecks.Redis" Version="9.0.0" />
     <PackageReference Include="AspNetCore.HealthChecks.UI.Client" Version="9.0.0" />
     <PackageReference Include="Dapper" Version="2.1.35" />
+    <PackageReference Include="MassTransit.RabbitMQ" Version="8.3.6" />
     <PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="9.0.1" />
     <PackageReference Include="Microsoft.AspNetCore.OpenApi" Version="9.0.1" />
     <PackageReference Include="Microsoft.Extensions.Caching.StackExchangeRedis" Version="9.0.1" />
@@ -28,7 +29,7 @@
     <Folder Include="Modules\Budgets\" />
     <Folder Include="Modules\Stocks\Application\" />
     <Folder Include="Modules\Transactions\" />
-    <Folder Include="Modules\Users\Application\" />
+    <Folder Include="Modules\Users\Presentation\" />
   </ItemGroup>
 
   <ItemGroup>
