feat: added Stock endpoints

--- a/StockMarketSimulator.Api/appsettings.Development.json
+++ b/StockMarketSimulator.Api/appsettings.Development.json
@@ -31,6 +31,14 @@
     "Audience": "investors",
     "ExpirationInMinutes": 60
   },
+  "StockUpdateOptions": {
+    "UpdateInterval": "00:00:01",
+    "MaxPercentageChange": 0.002
+  },
+  "Stocks": {
+    "ApiUrl": "https://www.alphavantage.co/query",
+    "ApiKey": ""
+  },
   "ConnectionStrings": {
     "Database": "Host=stockmarketsimulator-postgres;Port=5432;Database=stock-market-simulator;Username=postgres;Password=postgres;Include Error Detail=true",
     "Cache": "redis:6379"
