--- a/StockMarketSimulator.Api/appsettings.json
+++ b/StockMarketSimulator.Api/appsettings.json
@@ -11,5 +11,12 @@
     "Issuer": "",
     "Audience": "",
     "ExpirationInMinutes": 0
+  },
+  "Stocks": {
+    "ApiUrl": "https://www.alphavantage.co/query",
+    "ApiKey": ""
+  },
+  "Cors": {
+    "AllowedOrigin": "http://localhost:3000"
   }
 }
