feat: added ability to login/register to the frontend

--- a/StockMarketSimulator.Api/appsettings.Development.json
+++ b/StockMarketSimulator.Api/appsettings.Development.json
@@ -42,5 +42,11 @@
   "ConnectionStrings": {
     "Database": "Host=stockmarketsimulator-postgres;Port=5432;Database=stock-market-simulator;Username=postgres;Password=postgres;Include Error Detail=true",
     "Cache": "redis:6379"
+  },
+  "Email": {
+    "SenderEmail": "stockmarketsimulator@noreply.com",
+    "Sender": "StockMarketSimulator",
+    "Host": "stockmarketsimulator-papercut",
+    "Port": 25
   }
 }
