--- a/StockMarketSimulator.Api/appsettings.json
+++ b/StockMarketSimulator.Api/appsettings.json
@@ -18,5 +18,11 @@
   },
   "Cors": {
     "AllowedOrigin": "http://localhost:3000"
+  },
+  "Email": {
+    "SenderEmail": "",
+    "Sender": "",
+    "Host": "",
+    "Port": 0
   }
 }
