--- a/StockMarketSimulator.Api/StockMarketSimulator.Api.csproj
+++ b/StockMarketSimulator.Api/StockMarketSimulator.Api.csproj
@@ -36,4 +36,8 @@
     <ProjectReference Include="..\SharedKernel\SharedKernel.csproj" />
   </ItemGroup>
 
+   <ItemGroup>
+    <InternalsVisibleTo Include="Application.IntegrationTests"/>
+   </ItemGroup>
+
 </Project>
