implementation: added options validation

--- a/StockMarketSimulator.Api/appsettings.Development.json
+++ b/StockMarketSimulator.Api/appsettings.Development.json
@@ -32,7 +32,7 @@
     "ExpirationInMinutes": 60
   },
   "StockUpdateOptions": {
-    "UpdateInterval": "00:00:01",
+    "UpdateIntervalInSeconds": 1,
     "MaxPercentageChange": 0.002
   },
   "Stocks": {
@@ -43,10 +43,13 @@
     "Database": "Host=stockmarketsimulator-postgres;Port=5432;Database=stock-market-simulator;Username=postgres;Password=postgres;Include Error Detail=true",
     "Cache": "redis:6379"
   },
-  "Email": {
+  "EmailOptions": {
     "SenderEmail": "stockmarketsimulator@noreply.com",
     "Sender": "StockMarketSimulator",
     "Host": "stockmarketsimulator-papercut",
     "Port": 25
+  },
+  "BackgroundJobsOptions": {
+    "IntervalInSeconds": 5 
   }
 }
