--- a/StockMarketSimulator.Api/appsettings.json
+++ b/StockMarketSimulator.Api/appsettings.json
@@ -19,7 +19,7 @@
   "Cors": {
     "AllowedOrigin": "http://localhost:3000"
   },
-  "Email": {
+  "EmailOptions": {
     "SenderEmail": "",
     "Sender": "",
     "Host": "",
