--- a/StockMarketSimulator.Api/StockMarketSimulator.Api.csproj
+++ b/StockMarketSimulator.Api/StockMarketSimulator.Api.csproj
@@ -29,7 +29,7 @@
     <PackageReference Include="Quartz.Extensions.Hosting" Version="3.13.1" />
     <PackageReference Include="Quartz.Serialization.Json" Version="3.13.1" />
     <PackageReference Include="RedisRateLimiting.AspNetCore" Version="1.2.0" />
-    <PackageReference Include="Scalar.AspNetCore" Version="2.0.24" />
+    <PackageReference Include="Scalar.AspNetCore" Version="2.0.26" />
     <PackageReference Include="Serilog.AspNetCore" Version="9.0.0" />
     <PackageReference Include="Serilog.Sinks.Seq" Version="9.0.0" />
     <PackageReference Include="Swashbuckle.AspNetCore" Version="7.3.1" />
@@ -40,8 +40,9 @@
     <ProjectReference Include="..\SharedKernel\SharedKernel.csproj" />
   </ItemGroup>
 
-   <ItemGroup>
+  <ItemGroup>
     <InternalsVisibleTo Include="Application.IntegrationTests" />
-   </ItemGroup>
+    <InternalsVisibleTo Include="Domain.UnitTests" />
+  </ItemGroup>
 
 </Project>
