refactor 4: added authentication/authorization

--- a/src/Modules/Users/Modules.Users.Application/Modules.Users.Application.csproj
+++ b/src/Modules/Users/Modules.Users.Application/Modules.Users.Application.csproj
@@ -8,6 +8,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\..\..\Application\Application.csproj" />
+    <ProjectReference Include="..\Modules.Users.Domain\Modules.Users.Domain.csproj" />
   </ItemGroup>
 
 </Project>
