--- a/src/Modules/Users/Modules.Users.Infrastructure/Modules.Users.Infrastructure.csproj
+++ b/src/Modules/Users/Modules.Users.Infrastructure/Modules.Users.Infrastructure.csproj
@@ -12,4 +12,8 @@
     <ProjectReference Include="..\Modules.Users.Domain\Modules.Users.Domain.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="9.0.3" />
+  </ItemGroup>
+
 </Project>
