refactor: added users usecases

--- a/src/Modules/Users/Modules.Users.Application/Modules.Users.Application.csproj
+++ b/src/Modules/Users/Modules.Users.Application/Modules.Users.Application.csproj
@@ -9,6 +9,7 @@
   <ItemGroup>
     <ProjectReference Include="..\..\..\Application\Application.csproj" />
     <ProjectReference Include="..\Modules.Users.BackgroundJobs\Modules.Users.BackgroundJobs.csproj" />
+    <ProjectReference Include="..\Modules.Users.Contracts\Modules.Users.Contracts.csproj" />
     <ProjectReference Include="..\Modules.Users.Domain\Modules.Users.Domain.csproj" />
   </ItemGroup>
 
