--- a/src/Modules/Stocks/Stocks.Domain/Stocks.Domain.csproj
+++ b/src/Modules/Stocks/Stocks.Domain/Stocks.Domain.csproj
@@ -7,7 +7,7 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Microsoft.EntityFrameworkCore" Version="9.0.3" />
+    <ProjectReference Include="..\..\..\SharedKernel\SharedKernel.csproj" />
   </ItemGroup>
 
 </Project>
