--- a/src/Modules/Users/Modules.Users.Infrastructure/Modules.Users.Infrastructure.csproj
+++ b/src/Modules/Users/Modules.Users.Infrastructure/Modules.Users.Infrastructure.csproj
@@ -8,6 +8,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\..\..\Infrastructure\Infrastructure.csproj" />
+    <ProjectReference Include="..\Modules.Users.Api\Modules.Users.Api.csproj" />
     <ProjectReference Include="..\Modules.Users.Application\Modules.Users.Application.csproj" />
     <ProjectReference Include="..\Modules.Users.Domain\Modules.Users.Domain.csproj" />
   </ItemGroup>
