--- a/src/Modules/Stocks/Modules.Stocks.Infrastructure/Modules.Stocks.Infrastructure.csproj
+++ b/src/Modules/Stocks/Modules.Stocks.Infrastructure/Modules.Stocks.Infrastructure.csproj
@@ -8,6 +8,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\..\..\Infrastructure\Infrastructure.csproj" />
+    <ProjectReference Include="..\Modules.Stocks.Api\Modules.Stocks.Api.csproj" />
     <ProjectReference Include="..\Modules.Stocks.Application\Modules.Stocks.Application.csproj" />
     <ProjectReference Include="..\Modules.Stocks.Domain\Modules.Stocks.Domain.csproj" />
   </ItemGroup>
