refactor: added stocks endpoints & fixed search endpoint

--- a/src/Web.Api/appsettings.Development.json
+++ b/src/Web.Api/appsettings.Development.json
@@ -6,8 +6,8 @@
         }
     },
     "ConnectionStrings": {
-        "Database": "Host=stockmarketsimulator-postgres;Port=5432;Database=stock-market-simulator;Username=postgres;Password=postgres;Include Error Detail=true",
-        "Cache": "redis:6379"
+        "stockmarketsimulator-db": "Host=stockmarketsimulator-postgres;Port=5432;Database=stock-market-simulator;Username=postgres;Password=postgres;Include Error Detail=true",
+        "stockmarketsimulator-redis": "redis:6379"
     },
     "Jwt": {
         "Secret": "super-duper-secret-value-that-should-be-in-user-secrets",
@@ -25,5 +25,9 @@
         "SmtpPassword": "",
         "SmtpServer": "smtp.ethereal.email",
         "SmtpPort": 587
+    },
+    "StockUpdateOptions": {
+        "UpdateIntervalInSeconds": 1,
+        "MaxPercentageChange": 0.002
     }
 }
