--- a/src/Modules/Users/Modules.Users.BackgroundJobs/Modules.Users.BackgroundJobs.csproj
+++ b/src/Modules/Users/Modules.Users.BackgroundJobs/Modules.Users.BackgroundJobs.csproj
@@ -12,6 +12,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\..\..\Infrastructure\Infrastructure.csproj" />
+    <ProjectReference Include="..\..\Budgeting\Modules.Budgeting.Api\Modules.Budgeting.Api.csproj" />
   </ItemGroup>
 
 </Project>
