refactor: added login/register page for web UI

--- a/src/Web.Api/appsettings.Development.json
+++ b/src/Web.Api/appsettings.Development.json
@@ -29,5 +29,8 @@
     "StockUpdateOptions": {
         "UpdateIntervalInSeconds": 1,
         "MaxPercentageChange": 0.002
+    },
+    "Cors": {
+        "AllowedOrigin": "http://localhost:5173"
     }
 }
