--- a/src/web-ui/src/package.json
+++ b/src/web-ui/src/package.json
@@ -11,6 +11,7 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
+    "@microsoft/signalr": "^8.0.7",
     "axios": "^1.8.4",
     "jwt-decode": "^4.0.0",
     "notyf": "^3.10.0",
