--- a/src/web-ui/src/package.json
+++ b/src/web-ui/src/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "@microsoft/signalr": "^8.0.7",
     "axios": "^1.8.4",
+    "chart.js": "^4.4.8",
     "jwt-decode": "^4.0.0",
     "notyf": "^3.10.0",
     "zod": "^3.24.2"
