tests: added Integration tests

--- a/src/Modules/Users/Modules.Users.Application/Modules.Users.Application.csproj
+++ b/src/Modules/Users/Modules.Users.Application/Modules.Users.Application.csproj
@@ -13,4 +13,8 @@
     <ProjectReference Include="..\Modules.Users.Domain\Modules.Users.Domain.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+   <InternalsVisibleTo Include="Application.UnitTests" />
+  </ItemGroup>
+
 </Project>
