feat: added RabbitMQ for event sourcing

--- a/src/Web.Api/appsettings.Development.json
+++ b/src/Web.Api/appsettings.Development.json
@@ -32,5 +32,8 @@
     },
     "Cors": {
         "AllowedOrigin": "http://localhost:5173"
+    },
+    "MessageBroker": {
+        "QueueName": "stockmarketsimulator-queue"
     }
 }
