feat: added feature management

--- a/src/Web.Api/appsettings.Development.json
+++ b/src/Web.Api/appsettings.Development.json
@@ -35,5 +35,10 @@
     },
     "MessageBroker": {
         "QueueName": "stockmarketsimulator-queue"
+    },
+    "FeatureManagement": {
+        "UseV1StocksApi": true,
+        "UseV1UsersApi": true,
+        "UseV1BudgetingApi": true
     }
 }
