--- a/src/web-ui/src/package.json
+++ b/src/web-ui/src/package.json
@@ -2,6 +2,7 @@
   "name": "web-ui",
   "version": "1.0.0",
   "main": "index.js",
+  "type": "module",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "dev": "vite"
@@ -12,15 +13,19 @@
   "description": "",
   "dependencies": {
     "@microsoft/signalr": "^8.0.7",
-    "axios": "^1.8.4",
+    "@tailwindcss/vite": "^4.1.4",
+    "autoprefixer": "^10.4.21",
+    "axios": "^1.9.0",
     "chart.js": "^4.4.9",
     "flatpickr": "^4.6.13",
     "jwt-decode": "^4.0.0",
     "notyf": "^3.10.0",
+    "tailwindcss": "^4.1.4",
     "uuid": "^11.1.0",
     "zod": "^3.24.3"
   },
   "devDependencies": {
-    "vite": "^6.3.2"
+    "@tailwindcss/postcss": "^4.1.4",
+    "vite": "^6.3.3"
   }
 }
