--- a/src/web-ui/src/package.json
+++ b/src/web-ui/src/package.json
@@ -21,6 +21,7 @@
     "jwt-decode": "^4.0.0",
     "notyf": "^3.10.0",
     "tailwindcss": "^4.1.4",
+    "tw-animate-css": "^1.2.8",
     "uuid": "^11.1.0",
     "zod": "^3.24.3"
   },
