feat: added transactions UI
- Added realtime updates
- Fixed API tests

--- a/src/Modules/Budgeting/Modules.Budgeting.Application/Modules.Budgeting.Application.csproj
+++ b/src/Modules/Budgeting/Modules.Budgeting.Application/Modules.Budgeting.Application.csproj
@@ -13,4 +13,9 @@
     <ProjectReference Include="..\Modules.Budgeting.Domain\Modules.Budgeting.Domain.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <InternalsVisibleTo Include="Application.UnitTests" />
+    <InternalsVisibleTo Include="Api.FunctionalTests" />
+  </ItemGroup>
+
 </Project>
