--- a/src/Modules/Stocks/Modules.Stocks.Application/Modules.Stocks.Application.csproj
+++ b/src/Modules/Stocks/Modules.Stocks.Application/Modules.Stocks.Application.csproj
@@ -12,4 +12,9 @@
     <ProjectReference Include="..\Modules.Stocks.Domain\Modules.Stocks.Domain.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+     <InternalsVisibleTo Include="Application.UnitTests" />
+     <InternalsVisibleTo Include="Api.FunctionalTests" />
+  </ItemGroup>
+
 </Project>
