--- a/src/web-ui/package.json
+++ b/src/web-ui/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@hookform/resolvers": "^5.0.1",
+    "@microsoft/signalr": "^8.0.7",
     "@radix-ui/react-accordion": "^1.2.8",
     "@radix-ui/react-alert-dialog": "^1.1.11",
     "@radix-ui/react-aspect-ratio": "^1.1.4",
@@ -36,12 +37,12 @@
     "@radix-ui/react-toggle": "^1.1.6",
     "@radix-ui/react-toggle-group": "^1.1.7",
     "@radix-ui/react-tooltip": "^1.2.4",
-    "@tanstack/react-query": "^5.74.7",
+    "@tanstack/react-query": "^5.74.9",
     "@tanstack/react-table": "^8.21.3",
-    "@trpc/client": "^11.1.1",
-    "@trpc/next": "^11.1.1",
-    "@trpc/react-query": "^11.1.1",
-    "@trpc/server": "^11.1.1",
+    "@trpc/client": "^11.1.2",
+    "@trpc/next": "^11.1.2",
+    "@trpc/react-query": "^11.1.2",
+    "@trpc/server": "^11.1.2",
     "axios": "^1.9.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
