refactor & fixed issues
- Used railway programming in the Minimal API endpoints
- Fixed concurrency issues with locking in  the PermissionAuthorizationPolicyProvider
- Fixed types in custom tooltip

--- a/src/Web.Api/appsettings.Development.json
+++ b/src/Web.Api/appsettings.Development.json
@@ -13,7 +13,7 @@
         "Secret": "super-duper-secret-value-that-should-be-in-user-secrets",
         "Issuer": "stock-market-simulator",
         "Audience": "investors",
-        "ExpirationInMinutes": 60
+        "ExpirationInMinutes": 600
     },
     "Stocks": {
         "ApiUrl": "https://www.alphavantage.co/query",
@@ -39,6 +39,7 @@
     "FeatureManagement": {
         "UseV1StocksApi": true,
         "UseV1UsersApi": true,
-        "UseV1BudgetingApi": true
+        "UseV1BudgetingApi": true,
+        "UseV1ShortenApi": true
     }
 }
