--- a/src/web-ui/package.json
+++ b/src/web-ui/package.json
@@ -37,6 +37,7 @@
     "@radix-ui/react-toggle": "^1.1.6",
     "@radix-ui/react-toggle-group": "^1.1.7",
     "@radix-ui/react-tooltip": "^1.2.4",
+    "@radix-ui/react-visually-hidden": "^1.2.0",
     "@tanstack/react-query": "^5.75.0",
     "@tanstack/react-table": "^8.21.3",
     "@trpc/client": "^11.1.2",
@@ -69,7 +70,8 @@
     "superjson": "^2.2.2",
     "tailwind-merge": "^3.2.0",
     "vaul": "^1.1.2",
-    "zod": "^3.24.3"
+    "zod": "^3.24.3",
+    "zustand": "^5.0.4"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3.3.1",
