feat: apply UTC DateTime conversion, add ForEach extension, and integrate Sentry OTEL
- Added ApplyUtcDateTimeConverter to enforce UTC handling for DateTime properties containing 'Utc' in DB models
- Introduced ForEach extension method for functional iteration over IEnumerable
- Registered ApplyUtcDateTimeConverter in all DbContexts
- Integrated Sentry OpenTelemetry for enhanced observability

--- a/src/Web.Api/appsettings.Development.json
+++ b/src/Web.Api/appsettings.Development.json
@@ -41,5 +41,8 @@
         "UseV1UsersApi": true,
         "UseV1BudgetingApi": true,
         "UseV1ShortenApi": true
+    },
+    "Sentry": {
+        "Dsn": ""
     }
 }
