--- a/src/Web.Api/Web.Api.csproj
+++ b/src/Web.Api/Web.Api.csproj
@@ -23,6 +23,7 @@
     <PackageReference Include="Microsoft.VisualStudio.Azure.Containers.Tools.Targets" Version="1.21.2" />
     <PackageReference Include="RedisRateLimiting.AspNetCore" Version="1.2.0" />
     <PackageReference Include="Scalar.AspNetCore" Version="2.2.5" />
+    <PackageReference Include="Sentry.AspNetCore" Version="5.6.0" />
     <PackageReference Include="Swashbuckle.AspNetCore" Version="8.1.1" />
     <PackageReference Include="Swashbuckle.AspNetCore.ReDoc" Version="8.1.1" />
   </ItemGroup>
