--- a/src/web-ui/package.json
+++ b/src/web-ui/package.json
@@ -38,7 +38,7 @@
     "@radix-ui/react-toggle-group": "^1.1.7",
     "@radix-ui/react-tooltip": "^1.2.4",
     "@radix-ui/react-visually-hidden": "^1.2.0",
-    "@tanstack/react-query": "^5.75.0",
+    "@tanstack/react-query": "^5.75.1",
     "@tanstack/react-table": "^8.21.3",
     "@trpc/client": "^11.1.2",
     "@trpc/next": "^11.1.2",
@@ -55,8 +55,8 @@
     "jwt-decode": "^4.0.0",
     "lucide-react": "^0.503.0",
     "next": "15.3.1",
+    "next-auth": "^5.0.0-beta.27",
     "next-themes": "^0.4.6",
-    "node-fetch": "^3.3.2",
     "react": "^19.1.0",
     "react-countup": "^6.5.3",
     "react-day-picker": "8.10.1",
@@ -79,10 +79,10 @@
     "@types/node": "^20.17.32",
     "@types/react": "^19.1.2",
     "@types/react-dom": "^19.1.3",
-    "eslint": "^9.25.1",
+    "eslint": "^9.26.0",
     "eslint-config-next": "15.3.1",
     "tailwindcss": "^4.1.5",
-    "tw-animate-css": "^1.2.8",
+    "tw-animate-css": "^1.2.9",
     "typescript": "^5.8.3"
   }
 }
