feat(transactions): adjust change logic by transaction type & add buy/sell support
- Updated TransactionWidget to compute 'change' based on transaction type:
  - For Buy transactions, change = current price - limit price
  - For Sell transactions, change = limit price - current price
  - Adjusted formatting to show gain/loss appropriately with color coding

- Added support for handling buy/sell transaction types across UI logic

- Improved readability by clarifying direction of value change and impact

--- a/src/web-ui/package.json
+++ b/src/web-ui/package.json
@@ -38,7 +38,7 @@
     "@radix-ui/react-toggle-group": "^1.1.7",
     "@radix-ui/react-tooltip": "^1.2.4",
     "@radix-ui/react-visually-hidden": "^1.2.0",
-    "@tanstack/react-query": "^5.75.1",
+    "@tanstack/react-query": "^5.75.2",
     "@tanstack/react-table": "^8.21.3",
     "@trpc/client": "^11.1.2",
     "@trpc/next": "^11.1.2",
@@ -62,13 +62,14 @@
     "react-day-picker": "8.10.1",
     "react-dom": "^19.1.0",
     "react-error-boundary": "^5.0.0",
-    "react-hook-form": "^7.56.1",
+    "react-hook-form": "^7.56.2",
     "react-icons": "^5.5.0",
     "react-resizable-panels": "^2.1.9",
     "recharts": "^2.15.3",
     "sonner": "^2.0.3",
     "superjson": "^2.2.2",
     "tailwind-merge": "^3.2.0",
+    "uuid": "^11.1.0",
     "vaul": "^1.1.2",
     "zod": "^3.24.3",
     "zustand": "^5.0.4"
