feat(ui): update DataCard component styling
- Ensured actual title and descriptions

--- a/src/Modules/Stocks/Modules.Stocks.Application/Modules.Stocks.Application.csproj
+++ b/src/Modules/Stocks/Modules.Stocks.Application/Modules.Stocks.Application.csproj
@@ -8,6 +8,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\..\..\Application\Application.csproj" />
+    <ProjectReference Include="..\..\Budgeting\Modules.Budgeting.Api\Modules.Budgeting.Api.csproj" />
     <ProjectReference Include="..\Modules.Stocks.Contracts\Modules.Stocks.Contracts.csproj" />
     <ProjectReference Include="..\Modules.Stocks.Domain\Modules.Stocks.Domain.csproj" />
   </ItemGroup>
