--- a/src/StockMarketSimulator.AppHost/StockMarketSimulator.AppHost.csproj
+++ b/src/StockMarketSimulator.AppHost/StockMarketSimulator.AppHost.csproj
@@ -12,6 +12,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Aspire.Hosting.Azure.Storage" Version="9.2.1" />
     <PackageReference Include="Aspire.Hosting.AppHost" Version="9.2.1" />
     <PackageReference Include="Aspire.Hosting.PostgreSQL" Version="9.2.1" />
     <PackageReference Include="Aspire.Hosting.RabbitMQ" Version="9.2.1" />
