--- a/src/web-ui/package.json
+++ b/src/web-ui/package.json
@@ -38,7 +38,7 @@
     "@radix-ui/react-toggle-group": "^1.1.9",
     "@radix-ui/react-tooltip": "^1.2.6",
     "@radix-ui/react-visually-hidden": "^1.2.2",
-    "@tanstack/react-query": "^5.75.4",
+    "@tanstack/react-query": "^5.75.5",
     "@tanstack/react-table": "^8.21.3",
     "@trpc/client": "^11.1.2",
     "@trpc/next": "^11.1.2",
@@ -56,6 +56,7 @@
     "input-otp": "^1.4.2",
     "jwt-decode": "^4.0.0",
     "lucide-react": "^0.503.0",
+    "motion": "^12.10.0",
     "next": "15.3.1",
     "next-auth": "^5.0.0-beta.27",
     "next-themes": "^0.4.6",
@@ -79,7 +80,7 @@
   "devDependencies": {
     "@eslint/eslintrc": "^3.3.1",
     "@tailwindcss/postcss": "^4.1.5",
-    "@types/node": "^20.17.41",
+    "@types/node": "^20.17.43",
     "@types/react": "^19.1.3",
     "@types/react-dom": "^19.1.3",
     "eslint": "^9.26.0",
