--- a/src/Modules/Users/Modules.Users.BackgroundJobs/Modules.Users.BackgroundJobs.csproj
+++ b/src/Modules/Users/Modules.Users.BackgroundJobs/Modules.Users.BackgroundJobs.csproj
@@ -9,6 +9,7 @@
   <ItemGroup>
     <ProjectReference Include="..\..\..\Infrastructure\Infrastructure.csproj" />
     <ProjectReference Include="..\..\Budgeting\Modules.Budgeting.Api\Modules.Budgeting.Api.csproj" />
+    <ProjectReference Include="..\..\Budgeting\Modules.Budgeting.Domain\Modules.Budgeting.Domain.csproj" />
   </ItemGroup>
 
 </Project>
