--- a/src/web-ui/package.json
+++ b/src/web-ui/package.json
@@ -60,6 +60,7 @@
     "next": "15.3.1",
     "next-auth": "^5.0.0-beta.27",
     "next-themes": "^0.4.6",
+    "nuqs": "^2.4.3",
     "react": "^19.1.0",
     "react-countup": "^6.5.3",
     "react-day-picker": "8.10.1",
