feat: added ability to go on the Yahoo finance page of stocks

--- a/src/Web.Api/appsettings.Development.json
+++ b/src/Web.Api/appsettings.Development.json
@@ -40,7 +40,8 @@
         "UseV1StocksApi": true,
         "UseV1UsersApi": true,
         "UseV1BudgetingApi": true,
-        "UseV1ShortenApi": true
+        "UseV1ShortenApi": true,
+        "UseV1FilesApi": true
     },
     "Sentry": {
         "Dsn": ""
