feat: added the ability for the user to change profile/banner images

--- a/src/Web.Api/appsettings.Development.json
+++ b/src/Web.Api/appsettings.Development.json
@@ -7,7 +7,9 @@
     },
     "ConnectionStrings": {
         "stockmarketsimulator-db": "Host=stockmarketsimulator-postgres;Port=5432;Database=stock-market-simulator;Username=postgres;Password=postgres;Include Error Detail=true",
-        "stockmarketsimulator-redis": "redis:6379"
+        "stockmarketsimulator-redis": "redis:6379",
+        "stockmarketsimulator-storage": "blob",
+        "stockmarketsimulator-rabbitmq": "rabbitmq"
     },
     "Jwt": {
         "Secret": "super-duper-secret-value-that-should-be-in-user-secrets",
