--- a/src/Modules/Users/Modules.Users.Api/Modules.Users.Api.csproj
+++ b/src/Modules/Users/Modules.Users.Api/Modules.Users.Api.csproj
@@ -8,6 +8,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\..\..\SharedKernel\SharedKernel.csproj" />
+    <ProjectReference Include="..\Modules.Users.Application\Modules.Users.Application.csproj" />
   </ItemGroup>
 
 </Project>
