--- a/src/StockMarketSimulator.ServiceDefaults/StockMarketSimulator.ServiceDefaults.csproj
+++ b/src/StockMarketSimulator.ServiceDefaults/StockMarketSimulator.ServiceDefaults.csproj
@@ -10,7 +10,7 @@
   <ItemGroup>
     <FrameworkReference Include="Microsoft.AspNetCore.App" />
 
-    <PackageReference Include="Microsoft.Extensions.Http.Resilience" Version="9.4.0" />
+    <PackageReference Include="Microsoft.Extensions.Http.Resilience" Version="9.5.0" />
     <PackageReference Include="Microsoft.Extensions.ServiceDiscovery" Version="9.2.1" />
     <PackageReference Include="Npgsql.OpenTelemetry" Version="9.0.3" />
     <PackageReference Include="OpenTelemetry.Exporter.OpenTelemetryProtocol" Version="1.12.0" />
@@ -19,7 +19,7 @@
     <PackageReference Include="OpenTelemetry.Instrumentation.EntityFrameworkCore" Version="1.12.0-beta.1" />
     <PackageReference Include="OpenTelemetry.Instrumentation.Http" Version="1.12.0" />
     <PackageReference Include="OpenTelemetry.Instrumentation.Runtime" Version="1.12.0" />
-    <PackageReference Include="Sentry.OpenTelemetry" Version="5.7.0-beta.0" />
+    <PackageReference Include="Sentry.OpenTelemetry" Version="5.7.0" />
   </ItemGroup>
 
 </Project>
