fixes & Yarp Proxy
- Fixed QueryCaching decorator caching the wrong value
- Added Batch Size for UpdateLatestStockPrice Job
- Added Yarp Proxy

--- a/src/StockMarketSimulator.AppHost/StockMarketSimulator.AppHost.csproj
+++ b/src/StockMarketSimulator.AppHost/StockMarketSimulator.AppHost.csproj
@@ -21,6 +21,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\Web.Api\Web.Api.csproj" />
+    <ProjectReference Include="..\Yarp.Proxy\Yarp.Proxy.csproj" />
   </ItemGroup>
 
 </Project>
