Require authentication for stocks hub, refactored dapper queries with CommandDefinition, added PostgresCacheService as a backup for redis

--- a/src/Yarp.Proxy/appsettings.Development.json
+++ b/src/Yarp.Proxy/appsettings.Development.json
@@ -12,11 +12,18 @@
                 "RateLimiterPolicy": "token-bucket",
                 "Match": {
                     "Path": "{**catch-all}"
-                }
+                },
+                "Transforms": [
+                    { "RequestHeaderOriginalHost": "true" }
+                ]
             }
         },
         "Clusters": {
             "stock-market-simulator-cluster": {
+                "HttpRequest": {
+                    "Version": "1.1",
+                    "VersionPolicy": "RequestVersionOrLower"
+                },
                 "SessionAffinity": {
                     "Enabled": true,
                     "AffinityKeyName": "stock-market-simulator-key"
